--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 library(tidyverse)
 library(lubridate)
 
-ymd_hms("2023-04-08 11:00:00", 
+ymd_hms("2023-08-19 09:00:00", 
         tz = "America/New_York") ->
   meeting
 
@@ -33,12 +33,13 @@ time_to_local <- function(x, tz){
 OlsonNames() %>%
   tibble(tz = .) %>%
   filter(tz != "US/Pacific-New") %>%
-  filter(tz %>% str_detect("Amsterdam|Stockholm|US/Eastern|British|Europe/London|US/Pacific|Mountain|US/Central")) %>%
+  filter(tz %>% str_detect("Amsterdam|Adelaide|Stockholm|US/Eastern|British|Europe/London|US/Pacific|Mountain|US/Central|Sydney|Europe/Vienna")) %>%
   mutate(meeting_ny = meeting) %>%
   mutate(local_time = purrr::map2(meeting_ny, tz, time_to_local))  %>%
   unnest(local_time) %>%
   group_by(local_time) %>%
-  summarise(locations = paste(tz, collapse = "\n")) ->
+  summarise(locations = paste(tz, collapse = "\n")) %>% 
+  mutate(day = as_date(local_time) %>% wday(label = T)) ->
 df
 
 # df %>% 
@@ -70,53 +71,163 @@ df %>%
   coord_polar() + 
   scale_x_continuous(limits = c(0,1)) + 
   geom_text(data = tibble(x = 1:12, y = 1), 
-            aes(label = x, x = x/12, y = y, xend = NULL, yend = NULL, color = NULL),
+            aes(label = x, x = x/12, y = y, xend = NULL, 
+                yend = NULL, color = NULL),
             show.legend = F) + 
   theme_void() + 
   annotate(geom = "segment", x = 0, xend = 1, y = 1.2, yend = 1.2)
 
 ```
 
-<!-- badges: start -->
-<!-- badges: end -->
+What would gglobalclocks syntax look like using above approach as jumping off point?
 
-The goal of gglobalclocks is to ...
 
-## Installation
-
-You can install the released version of gglobalclocks from [CRAN](https://CRAN.R-project.org) with:
-
-``` r
-install.packages("gglobalclocks")
 ```
-
-And the development version from [GitHub](https://github.com/) with:
-
-``` r
-# install.packages("devtools")
-devtools::install_github("EvaMaeRey/gglobalclocks")
+gglobalclocks() + # wraps up theme void and coord_polar 
+ stamp_clockface() + # wraps up drawing numbers and circle
+ aes(local_date_time = date_timevar) + 
+ geom_clockhands() + 
+ facet_wrap(~location)
 ```
-## Example
+ 
 
-This is a basic example which shows you how to solve a common problem:
+```{r}
+gglobalclocks <- function(data = NULL){
+  
+  ggplot(data) + 
+  list(theme_void(),
+       coord_polar(),
+       scale_x_continuous(limits = c(0,1)),
+       scale_y_continuous(limits = c(0,1.3)))
+  
+}
 
-```{r example}
-# library(gglobalclocks)
-## basic example code
+gglobalclocks()
+
+stamp_clockface <- function(){
+  
+    list(geom_text(data = tibble(x = 1:12, y = 1), 
+            aes(label = x, x = x/12, y = y, xend = NULL, 
+                yend = NULL, color = NULL, local_time = NULL),
+            show.legend = F),
+          annotate(geom = "segment", x = 0, xend = 1, y = 1.2, yend = 1.2)
+         
+    )
+  
+}
+
+gglobalclocks() + stamp_clockface()
+
+compute_clock_hands <- function(data){
+  
+  data |> 
+  mutate(minute_turn = local_time %>% lubridate::minute() %% 60 / 60) |> 
+  mutate(hour_turn = local_time %>% lubridate::hour() %% 12/12 + minute_turn/12) |>  
+  mutate(am_pm = ifelse(local_time %>% lubridate::hour() > 12, "pm", "am")) 
+  
+}
+
+compute_hour_hand <- function(data, scales){
+  
+  data |>
+    compute_clock_hands() |>
+    mutate(x =  hour_turn, 
+      xend =  hour_turn,
+      y = 0,
+      yend = .6)
+  
+}
+
+compute_minute_hand <- function(data, scales){
+  
+  data |>
+    compute_clock_hands() |>
+    mutate(x =  minute_turn, 
+      xend =  minute_turn,
+      # color = am_pm, 
+      y = 0,
+      yend = 1)
+  
+}
+
+df |> compute_clock_hands()
+df |> compute_minute_hand()
+
+
+statClockminhand <- ggproto(`_class` = "statClockminhand",
+                          `_inherit` = ggplot2::Stat,
+                          # required_aes = c("local_time"),
+                          compute_group = compute_minute_hand,
+                          default_aes = ggplot2::aes(color =
+                                                            ggplot2::after_stat(am_pm))
+                           )
+
+geom_minute_hand <- function(
+  mapping = NULL,
+  data = NULL,
+  position = "identity",
+  na.rm = FALSE,
+  show.legend = NA,
+  inherit.aes = TRUE, ...) {
+  ggplot2::layer(
+    stat = statClockminhand,  # proto object from step 2
+    geom = ggplot2::GeomSegment,  # inherit other behavior
+    data = data,
+    mapping = mapping,
+    position = position,
+    show.legend = show.legend,
+    inherit.aes = inherit.aes,
+    params = list(na.rm = na.rm, ...)
+  )
+}
+
+statClockhourhand <- ggproto(`_class` = "statClockhourhand",
+                          `_inherit` = ggplot2::Stat,
+                          # required_aes = c("local_time"),
+                          compute_group = compute_hour_hand,
+                          default_aes = ggplot2::aes(color =
+                                                            ggplot2::after_stat(am_pm))
+                           )
+
+geom_hour_hand <- function(
+  mapping = NULL,
+  data = NULL,
+  position = "identity",
+  na.rm = FALSE,
+  show.legend = NA,
+  inherit.aes = TRUE, ...) {
+  ggplot2::layer(
+    stat = statClockhourhand,  # proto object from step 2
+    geom = ggplot2::GeomSegment,  # inherit other behavior
+    data = data,
+    mapping = mapping,
+    position = position,
+    show.legend = show.legend,
+    inherit.aes = inherit.aes,
+    params = list(na.rm = na.rm, ...)
+  )
+}
+
+gglobalclocks(data = df) + 
+  aes(local_time = local_time) + 
+  stamp_clockface() + 
+  geom_minute_hand() +
+  geom_hour_hand() + 
+  facet_wrap(~locations) 
+
+geom_clock_hands <- function(...){
+  
+  list(geom_hour_hand(...),
+       geom_minute_hand(...))
+  
+  
+}
+
+gglobalclocks(data = df) + 
+  aes(local_time = local_time) + 
+  stamp_clockface() + 
+  geom_clock_hands() + 
+  facet_wrap(~locations) 
+
+
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
