--- a/README.Rmd
+++ b/README.Rmd
@@ -16,11 +16,11 @@ knitr::opts_chunk$set(
 # gglobalclocks
 
 
-```{r}
+```{r, comment=""}
 library(tidyverse)
 library(lubridate)
 
-ymd_hms("2023-08-19 09:00:00", 
+ymd_hms("2023-09-02 09:00:00", 
         tz = "America/New_York") ->
   meeting
 
@@ -40,7 +40,7 @@ OlsonNames() %>%
   group_by(local_time) %>%
   summarise(locations = paste(tz, collapse = "\n")) %>% 
   mutate(day = as_date(local_time) %>% wday(label = T)) ->
-df
+df; df
 
 # df %>% 
 #   ggplot() + 
