--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,10 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
+<!-- badges: start -->
+  [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+  <!-- badges: end -->
+
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -19,45 +23,107 @@ knitr::opts_chunk$set(
 ```{r, comment=""}
 library(tidyverse)
 library(lubridate)
+```
 
-ymd_hms("2023-09-02 09:00:00", 
-        tz = "America/New_York") ->
-  meeting
+### `time_to_local()`
 
+```{r time_to_local}
 time_to_local <- function(x, tz){
   lubridate::with_tz(x, tz = tz) %>%
     as.character()
 }
+```
 
+### `date_time_tz_to_tzs()`
+
+```{r date_time_tz_to_tzs}
+date_time_tz_to_tzs <- function(from_date_time = "2024-03-27 12:00:00", 
+                                from_tz = "US/Mountain", 
+                                to_tz = c("Europe/Paris", 
+                                          "Europe/Amsterdam", 
+                                          "Australia/Adelaide",
+                                          "Australia/Melbourne", 
+                                          "Europe/Stockholm", 
+                                          "US/Eastern",
+                                          "Europe/London", 
+                                          "US/Pacific",
+                                          "US/Mountain", 
+                                          "US/Central", 
+                                          "Australia/Sydney",
+                                          "Europe/Vienna",
+                                          "America/Sao_Paulo",
+                                          "America/Santiago",
+                                          "America/Buenos_Aires")){
+
+   meeting <- ymd_hms(from_date_time, 
+                      tz = from_tz)
 
 OlsonNames() %>%
-  tibble(tz = .) %>%
-  filter(tz != "US/Pacific-New") %>%
-  filter(tz %>% str_detect("Amsterdam|Adelaide|Stockholm|US/Eastern|British|Europe/London|US/Pacific|Mountain|US/Central|Sydney|Europe/Vienna")) %>%
-  mutate(meeting_ny = meeting) %>%
-  mutate(local_time = purrr::map2(meeting_ny, tz, time_to_local))  %>%
-  unnest(local_time) %>%
-  group_by(local_time) %>%
-  summarise(locations = paste(tz, collapse = "\n")) %>% 
-  mutate(day = as_date(local_time) %>% wday(label = T)) ->
-df; df
+  data.frame(tz = .) %>%
+  dplyr::filter(tz != "US/Pacific-New") %>%
+  dplyr::filter(tz %in% to_tz) %>%
+  dplyr::mutate(local_date_time_chr = purrr::map2(meeting, tz, time_to_local))  %>%
+  tidyr::unnest(local_date_time_chr) %>%
+  dplyr::mutate(local_time_date_utc = 
+                  lubridate::ymd_hms(local_date_time_chr, tz = "UTC"))  %>% 
+  dplyr::mutate(local_time = lubridate::ymd_hms(local_date_time_chr))  %>% 
+  dplyr::mutate(local_time = hms::as_hms(local_time)) %>%
+  dplyr::mutate(local_date = as.Date(local_date_time_chr)) %>%
+  dplyr::mutate(local_wday = lubridate::wday(local_date, label = T)) %>%
+  dplyr::arrange(local_date, local_time) %>%
+  dplyr::select(-local_date_time_chr)
 
-# df %>% 
-#   ggplot() + 
-#   facet_wrap(~locations) +
-#   aes(angle = local_time %>% lubridate::hour() %% 12, 
-#       radius = 1, x = 0, y = 0) +
-#   geom_spoke(radius = .8) + 
-#   geom_spoke(aes(angle = local_time %>% lubridate::minute() %% 60)) 
-  
+}
+```
 
+
+
+### `local_tzs_df_collapse()`
+
+```{r local_tzs_df_collapse}
+local_tzs_df_collapse <- function(local_tzs_df, collapse = "; "){
   
-df %>% 
-  mutate(minute_turn = local_time %>% lubridate::minute() %% 60 / 60) %>% 
-  mutate(hour_turn = local_time %>% lubridate::hour() %% 12/12 + minute_turn/12) %>% 
-  mutate(am_pm = ifelse(local_time %>% lubridate::hour() > 12, "pm", "am")) %>% 
+  local_tzs_df |>
+    group_by(local_time, local_date, local_wday) |>
+    summarise(locations = paste(tz, collapse = collapse)) |>
+    ungroup() |>
+    select(locations, everything()) |>
+    mutate(locations = str_remove_all(locations, "Europe/|America/|Australia/"))
+  
+}
+```
+
+
+
+```{r}
+date_time_tz_to_tzs() |>
+  head()
+
+date_time_tz_to_tzs() |> 
+  local_tzs_df_collapse() |> 
+  head()
+```
+
+# More charming display...
+
+```{r}
+date_time_tz_to_tzs() |> 
+  local_tzs_df_collapse() |> 
+  knitr::kable()
+```
+
+# Inspiration - global clocks! 
+
+```{r}
+date_time_tz_to_tzs() |> 
+  local_tzs_df_collapse() |>
+  mutate(minute_turn = local_time %>% 
+           lubridate::minute() %% 60 / 60) %>% 
+  mutate(hour_turn = local_time %>% 
+           lubridate::hour() %% 12/12 + minute_turn/12) %>% 
+  mutate(am_pm = ifelse(local_time %>% lubridate::hour() >= 12, "pm", "am")) %>% 
   ggplot() + 
-  facet_wrap(~locations) + 
+  facet_wrap(~ str_wrap(locations, 15)) + 
   aes(x =  hour_turn, 
       xend =  hour_turn,
       y = 0,
@@ -76,7 +142,232 @@ df %>%
             show.legend = F) + 
   theme_void() + 
   annotate(geom = "segment", x = 0, xend = 1, y = 1.2, yend = 1.2)
+```
 
+## Practical more practical... (could be wrapped up in a function ... or app)
+
+
+```{r}
+date_time_tz_to_tzs() |> 
+  local_tzs_df_collapse() |>  
+  ggplot() + 
+  aes(local_time, fct_inorder(str_wrap(locations,25))) + 
+  labs(x = "Local meet time", y = NULL) + 
+  geom_point() + 
+  annotate(geom = "rect",
+            xmin = hms::as_hms("09:00:00"),
+            xmax = hms::as_hms("17:00:00"),
+            ymin = -Inf,
+            ymax = Inf,
+           alpha = .2, 
+           fill = "darkolivegreen3") + 
+    geom_vline(xintercept = hms::as_hms("12:00:00"),
+              linetype = "dashed", color = "grey25",
+              alpha = .2) +
+    annotate(geom = "rect",
+            xmin = hms::as_hms("07:00:00"),
+            xmax = hms::as_hms("09:00:00"),
+            ymin = -Inf,
+            ymax = Inf,
+           alpha = .2, 
+           fill = "goldenrod2") + 
+      annotate(geom = "rect",
+            xmin = hms::as_hms("17:00:00"),
+            xmax = hms::as_hms("21:00:00"),
+            ymin = -Inf,
+            ymax = Inf,
+           alpha = .2, 
+           fill = "goldenrod2") + 
+      annotate(geom = "rect",
+            xmin = hms::as_hms("00:00:00"),
+            xmax = hms::as_hms("07:00:00"),
+            ymin = -Inf,
+            ymax = Inf,
+           alpha = .2, 
+           fill = "black") + 
+        annotate(geom = "rect",
+            xmin = hms::as_hms("21:00:00"),
+            xmax = hms::as_hms("23:00:00"),
+            ymin = -Inf,
+            ymax = Inf,
+           alpha = .2, 
+           fill = "black") + 
+  geom_text(aes(label = local_time),
+            hjust = -.1, show.legend = F) + 
+  aes(color = paste0(local_wday, " ", month(local_date, label = T), ", ", day(local_date))) +
+  labs(color = "Local meet date") +
+  theme(legend.position = "top", 
+        legend.justification = "left") + 
+  theme(panel.grid.major.y = element_blank(),
+        panel.grid.minor.y = element_line(color = ""))
+
+
+```
+
+
+
+# Part II. Packaging and documentation  🚧
+
+## Phase 1. Minimal working package
+
+### Bit A. Created package archetecture, running `devtools::create(".")` in interactive session. ✅
+
+
+```{r, eval = F}
+devtools::create(".")
+```
+
+### Bit B. Added roxygen skeleton? 🚧 
+
+Use a roxygen skeleton for auto documentation and making sure proposed functions are *exported*.  Generally, early on, I don't do much (anything) in terms of filling in the skeleton for documentation, because things may change.
+
+### Bit C. Managed dependencies ? 🚧 
+
+Package dependencies managed, i.e. `depend::function()` in proposed functions and declared in the DESCRIPTION
+
+```{r, eval = F}
+usethis::use_package("dplyr")
+usethis::use_package( "hms")
+usethis::use_package( "lubridate")
+usethis::use_package( "purrr")
+usethis::use_package( "tidyr")
+```
+
+
+### Bit D. Moved functions R folder? ✅
+
+Use new {readme2pkg} function to do this from readme...
+
+```{r}
+readme2pkg::chunk_to_r("date_time_tz_to_tzs")
+readme2pkg::chunk_to_r("local_tzs_df_collapse")
+readme2pkg::chunk_to_r("time_to_local")
+```
+
+### Bit E. Run `devtools::check()` and addressed errors. 🚧 
+
+```{r, eval = F}
+devtools::check(pkg = ".")
+```
+
+### Bit F. Build package 🚧 ✅
+
+```{r, eval = F}
+devtools::build()
+```
+
+
+### Bit G. Write traditional README that uses built package (also serves as a test of build. ✅ 
+
+The goal of the {ggchalkboard} package is to make it easy to theme ggplots like chalkboards
+
+Install package with:
+
+```
+remotes::install_github("EvaMaeRey/ggchalkboard")
+```
+
+Once functions are exported you can remove go to two colons, and when things are are really finalized, then go without colons (and rearrange your readme...)
+
+```{r, eval = F}
+library(gglobalclocks)  
+
+gglobalclocks:::date_time_tz_to_tzs("2024-03-06 11:00:00", 
+                                    from_tz = "US/Mountain",
+                                    to_tz = c("US/Eastern",
+                                              "US/Mountain",
+                                              "US/Pacific",
+                                              "Europe/Paris"))
+```
+
+
+
+
+### Bit H. Chosen a license? ✅
+
+
+```{r, eval = F}
+usethis::use_mit_license()
+```
+
+### Bit I. Add lifecycle badge (experimental) ✅
+
+```{r, eval = F}
+usethis::use_lifecycle_badge("experimental")
+```
+
+
+## Phase 2: Listen & iterate 🚧 
+
+Try to get feedback from experts on API, implementation, default decisions.  Is there already work that solves this problem? 
+
+
+## Phase 3: Let things settle
+
+### Bit A. Settle on examples.  Put them in the roxygen skeleton and readme. 🚧 
+
+### Bit B. Written formal tests of functions and save to test that folders 🚧 
+
+
+That would look like this...
+
+```{r test_calc_times_two_works, eval = F}
+library(testthat)
+
+test_that("calc times 2 works", {
+  expect_equal(times_two(4), 8)
+  expect_equal(times_two(5), 10)
+  
+})
+```
+
+
+```{r, eval = F}
+readme2pkg::chunk_to_tests_testthat("test_calc_times_two_works")
+```
+
+
+### Bit C. Added a description and author information in the DESCRIPTION file 🚧 
+
+### Bit D. Addressed *all* notes, warnings and errors. 🚧 
+
+## Phase 4. Promote to wider audience...
+
+### Bit A. Package website built?  ✅
+
+```{r, eval = F}
+usethis::use_pkgdown()
+pkgdown::build_site()
+```
+
+
+### Bit B. Package website deployed? 🚧 ✅
+
+## Phase 5: Harden/commit
+
+### Submit to CRAN/RUniverse? 🚧 
+
+# Appendix: Reports, Environment
+
+## Edit Description file
+
+```{r, eval = T}
+readLines("DESCRIPTION")
+```
+
+## Environment
+
+Here I just want to print the packages and the versions
+
+```{r}
+all <- sessionInfo() |> print() |> capture.output()
+all[11:20]
+```
+
+## `devtools::check()` report
+
+```{r, error = T, results="hide", warning=F, eval = F}
+devtools::check(pkg = ".")
 ```
 
 What would gglobalclocks syntax look like using above approach as jumping off point?
@@ -90,8 +381,10 @@ gglobalclocks() + # wraps up theme void and coord_polar
  facet_wrap(~location)
 ```
  
+ 
+# returning to the actual global clocks idea.
 
-```{r}
+```{r eval = F}
 gglobalclocks <- function(data = NULL){
   
   ggplot(data) + 
@@ -121,9 +414,9 @@ gglobalclocks() + stamp_clockface()
 compute_clock_hands <- function(data){
   
   data |> 
-  mutate(minute_turn = local_time %>% lubridate::minute() %% 60 / 60) |> 
-  mutate(hour_turn = local_time %>% lubridate::hour() %% 12/12 + minute_turn/12) |>  
-  mutate(am_pm = ifelse(local_time %>% lubridate::hour() > 12, "pm", "am")) 
+  dplyr::mutate(minute_turn = local_time %>% lubridate::minute() %% 60 / 60) |> 
+  dplyr::mutate(hour_turn = local_time %>% lubridate::hour() %% 12/12 + minute_turn/12) |>  
+  dplyr::mutate(am_pm = ifelse(local_time %>% lubridate::hour() > 12, "pm", "am")) 
   
 }
 
@@ -131,7 +424,7 @@ compute_hour_hand <- function(data, scales){
   
   data |>
     compute_clock_hands() |>
-    mutate(x =  hour_turn, 
+    dplyr::mutate(x =  hour_turn, 
       xend =  hour_turn,
       y = 0,
       yend = .6)
@@ -142,7 +435,7 @@ compute_minute_hand <- function(data, scales){
   
   data |>
     compute_clock_hands() |>
-    mutate(x =  minute_turn, 
+    dplyr::mutate(x =  minute_turn, 
       xend =  minute_turn,
       # color = am_pm, 
       y = 0,
@@ -150,8 +443,8 @@ compute_minute_hand <- function(data, scales){
   
 }
 
-df |> compute_clock_hands()
-df |> compute_minute_hand()
+date_time_tz_to_tzs() |> compute_clock_hands()
+date_time_tz_to_tzs() |> compute_minute_hand()
 
 
 statClockminhand <- ggproto(`_class` = "statClockminhand",
@@ -208,26 +501,29 @@ geom_hour_hand <- function(
   )
 }
 
-gglobalclocks(data = df) + 
-  aes(local_time = local_time) + 
-  stamp_clockface() + 
+date_time_tz_to_tzs() |>
+  local_tzs_df_collapse() |>
+gglobalclocks() +
+  aes(local_time = local_time) +
+  stamp_clockface() +
   geom_minute_hand() +
-  geom_hour_hand() + 
-  facet_wrap(~locations) 
+  geom_hour_hand() +
+  facet_wrap(~locations)
 
 geom_clock_hands <- function(...){
   
   list(geom_hour_hand(...),
        geom_minute_hand(...))
   
-  
 }
 
-gglobalclocks(data = df) + 
+date_time_tz_to_tzs() |> 
+  local_tzs_df_collapse() |>
+  gglobalclocks() + 
   aes(local_time = local_time) + 
   stamp_clockface() + 
   geom_clock_hands() + 
-  facet_wrap(~locations) 
+  facet_wrap(~locations)
 
 
 ```
