--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ options(tidyverse.quiet = TRUE)
 
 What if you could draw a beautiful 'wall' of clocks with local times from around the world?  Well, gglobalclocks lets you do that!
 
-I worked on the wall of clocks thinking it might help me schedule virtual meetings with participant from around the world.  Does a beautiful wall of clocks help schedule global meetings?  As it turns out, in my experience, not really!
+I worked on the wall of clocks thinking it might help me schedule virtual meetings with participant in lots of different time zones.  Does a beautiful wall of clocks help schedule global meetings?  As it turns out, in my experience, not really!
 
 But gglobalclocks also has utilities for building dataframes of locations and local times which I have found helpful for multi-timezone scheduling.
 
